@@ -10,9 +10,16 @@ Below is a complete listing of changes for each revision of FasterCSV.
 * Documented test procedure.
 * Made FasterCSV#lineno CSV aware.
 * Added line numbers to MalformedCSVError messages.
-* :headers can now be set to an Array of headers to use.
-* :headers can now be set to an external CSV String of headers to use.
-* Added an :unconvered_fields options, so those can be returned as well.
+* <tt>:headers</tt> can now be set to an Array of headers to use.
+* <tt>:headers</tt> can now be set to an external CSV String of headers to use.
+* Added an <tt>:unconverted_fields</tt> options, so those can be returned
+  when needed.
+* Provided support for the serialization of custom Ruby objects using CSV.
+* Added CSV drop-in interface.
+* Added header information to FieldInfo Struct for conversions by header.
+* Added an alias to support <tt>require "fastercsv"</tt>.
+* Added FCSV alias for FasterCSV.
+* Added FasterCSV::instance and FasterCSV()/FCSV() shortcuts for easy output.
 
 == 0.1.9
 
